# xlauncher

./: README.md
sc/xlauncher-simple-sc/: .gitignore  Cargo.toml  mxpy.data-storage-mainnet.json  mxpy.data-storage.json
sc/xlauncher-simple-sc/interaction/: contract-snipets.sh  contract.snippets.sh
sc/xlauncher-simple-sc/interaction/logs/: empty-file.txt
sc/xlauncher-simple-sc/meta/: Cargo.toml
sc/xlauncher-simple-sc/meta/src/: main.rs
sc/xlauncher-simple-sc/scenarios/: _01_deploy.scen.json  _02_set_contract_settings.scen.json  _03_fund_contract.scen.json  _04_buy_ok.scen.json  _05_collect.scen.json
sc/xlauncher-simple-sc/src/: xlauncher_simple.rs
sc/xlauncher-simple-sc/tests/: xlauncher_rs_test.rs
sc/xlauncher-simple-sc/wasm/: Cargo.toml
sc/xlauncher-simple-sc/wasm/src/: lib.rs
